Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
-
ea88b0e24 (dev), bb4ec722d (6.8), 9a97e78d8 (dev), 49cb3203a (6.8)
Description
The new Windows11 style does not highlight the title bars when clicking on different MDI subwindows. It's impossible to tell which subwindow is the active one using this style.
int main(int argc, char **argv) { QApplication a(argc, argv); auto mdiArea = new QMdiArea; auto mdiWin1 = new QMdiSubWindow; mdiWin1->setWindowTitle("MDI 1"); auto mdiWin2 = new QMdiSubWindow; mdiWin2->setWindowTitle("MDI 2"); mdiArea->addSubWindow(mdiWin1); mdiArea->addSubWindow(mdiWin2); QMainWindow* mainWindow = new QMainWindow; mainWindow->setCentralWidget(mdiArea); mainWindow->show(); return a.exec(); }
Attachments
For Gerrit Dashboard: QTBUG-130673 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
606215,1 | QWindows11Style: adjust text rect for CC_TitleBar | dev | qt/qtbase | Status: NEW | +1 | 0 |
606216,1 | QWindows11Style: Adjust position of MDI subwindow icon | dev | qt/qtbase | Status: NEW | +1 | 0 |
602634,4 | QWindows11Style: Draw inactive MDI window texts lighter | dev | qt/qtbase | Status: MERGED | +2 | 0 |
606157,2 | QWindows11Style: Draw inactive MDI window texts lighter | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
606217,3 | QWindows11Style: simplify CC_TitleBar painting | dev | qt/qtbase | Status: MERGED | +2 | 0 |
607235,2 | QWindows11Style: simplify CC_TitleBar painting | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |