QWindows11Style: Draw inactive MDI window texts lighter

Fixes: QTBUG-130673
Change-Id: I431ac917ac159d54c35b6a8da270f3bac8117019
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit ea88b0e244ab077288bf6915118bf6b6745182c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>